--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Generate a random fake phone number from Ofcom's list of numbers reserved for use in TV and radio dramas. ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
